--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,7 @@ width: 1440px;
     height: 100%;
     align-items: center;
     background-color: #D8EFEE;
+    margin-top: 30px;
 }
 
 .my__skills__title{
